@@ -50,6 +50,7 @@ Version 1.13.0-dev:
  * User interface:
    * Classic Theme which restores the 1.10 UI. 
    * Made orb and minmap colors configurable by the game preferences.
+   * Remove 'allow_new_game=no' entries from random map new game list
  * WML engine:
    * Added customizable recall costs for unit types and individual units,
      using the new recall_cost attribute in [unit_type] and [unit].
